--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -1,6 +1,54 @@
 % This file was created with JabRef 2.8.
 % Encoding: ISO8859_1
 
+
+
+@article{scovell2000phase,
+  title={Phase transitions in vapor-deposited water under the influence of high surface electric fields},
+  author={Scovell, Dawn L and Pinkerton, Tim D and Medvedev, Valentin K and Stuve, Eric M},
+  journal={Surface science},
+  volume={457},
+  number={3},
+  pages={365--376},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{vitalini2013speed,
+  title={The speed of force fields},
+  author={Vitalini, F. and  Mey, A.S.J.S. and No\'e, F.  and Keller, B.G. },
+year  = {2013},
+  journal={unpublished}
+}
+
+
+
+@ARTICLE{vogel2008femtosecond,
+  author = {Vogel, A. and Linz, N. and Freidank, S. and Paltauf, G.},
+  title = {Femtosecond-laser-induced nanocavitation in water: implications for
+	optical breakdown threshold and cell surgery},
+  journal = {Physical review letters},
+  year = {2008},
+  volume = {100},
+  pages = {38102},
+  number = {3},
+  file = {vogel2008femtosecond.pdf:vogel2008femtosecond.pdf:PDF},
+  publisher = {APS},
+  timestamp = {2013.01.17}
+}
+
+@ARTICLE{bohner2012algorithm,
+  author = {Bohner, Matthias U and K{\"a}stner, Johannes},
+  title = {An algorithm to find minimum free-energy paths using umbrella integration},
+  journal = {The Journal of Chemical Physics},
+  year = {2012},
+  volume = {137},
+  pages = {034105},
+  file = {bohner2012algorithm.pdf:bohner2012algorithm.pdf:PDF},
+  timestamp = {2013.08.13}
+}
+
+
 @ARTICLE{delaHoz2005microwaves,
   author = {de la Hoz, Antonio and Diaz-Ortiz, Angel and Moreno, Andres},
   title = {Microwaves in organic synthesis. Thermal and non-thermal microwave
@@ -3917,19 +3965,6 @@
   timestamp = {2013.05.03}
 }
 
-@ARTICLE{vogel2008femtosecond,
-  author = {Vogel, A. and Linz, N. and Freidank, S. and Paltauf, G.},
-  title = {Femtosecond-laser-induced nanocavitation in water: implications for
-	optical breakdown threshold and cell surgery},
-  journal = {Physical review letters},
-  year = {2008},
-  volume = {100},
-  pages = {38102},
-  number = {3},
-  file = {vogel2008femtosecond.pdf:vogel2008femtosecond.pdf:PDF},
-  publisher = {APS},
-  timestamp = {2013.01.17}
-}
 
 @ARTICLE{vogel2005mechanisms,
   author = {Vogel, A. and Noack, J. and H{\"u}ttman, G. and Paltauf, G.},
