--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -3392,13 +3392,13 @@ year  = {2013},
 }
 
 @ARTICLE{schuette2011markov,
-  author = {Sch{\\"u}tte, C. and No{\'e}, F. and Lu, J. and Sarich, M. and Vanden-Eijnden,
+  author = {Sch{\"u}tte, C. and No{\'e}, F. and Lu, J. and Sarich, M. and Vanden-Eijnden,
 	E.},
   title = {Markov state models based on milestoning},
   journal = {The Journal of Chemical Physics},
-  year = {2011},
-  volume = {134},
-  pages = {204105},
+  year = 2011,
+  volume = 134,
+  pages = 204105,
   file = {schuette2011markov.pdf:schuette2011markov.pdf:PDF},
   timestamp = {2011.08.24}
 }
