update according Christof's comment

--- a/writedown/npt-neq/alanine.tex
+++ b/writedown/npt-neq/alanine.tex
@@ -446,11 +446,11 @@ net flux from $J$ to $I$,
 while a negative value indicates a net flux from $I$ to $J$.
 Through $F_{J,I}(t)$, the original overall nonequilibrium process $\vect x_t$
 is reduced to the probabilistic link between discretized conformations $\{A_1, A_2, B_1, B_2, C\}$.
-If the resulting reduced process 
-is time-reversible, then it is obvious that
-$ F_{J,I}(t) = 0$. In an other word, the quantity $ F_{J,I}(t) $ represents
-the irreversibility of the reduced process on
-$\{A_1, A_2, B_1, B_2, C\}$.
+% If the resulting reduced process 
+% is time-reversible, then it is obvious that
+% $ F_{J,I}(t) = 0$. In an other word, the quantity $ F_{J,I}(t) $ represents
+% the irreversibility of the reduced process on
+% $\{A_1, A_2, B_1, B_2, C\}$.
 % In practice, to measure $ F_{J,I}(t)$, one needs first to approximate the limit
 % in Eq.~\eqref{eqn:tmp7} by the finite difference,
 % then calculate the joint probabilities on
